# GBM-background-model

./: #calc_interpolation.py#  #eddit_fitsfile.py#  #work.py#  #work_advanced_flares.py#  #work_test.py#  .buildinfo  .directory  .gitattributes  .gitignore  Create_mac_file.ipynb  MANIFEST.in  Make_fits-Multimessenger.ipynb  Make_fits-ULGRBs-Copy1.ipynb  Make_fits-ULGRBs.ipynb  Make_fits_test_pointsources-Copy1.ipynb  Make_fits_test_pointsources-number_eval-Copy1.ipynb  Make_fits_test_pointsources-number_eval-reverted.ipynb  Make_fits_test_pointsources.ipynb  README.md  Sun_Earth_angle.ipynb  _create_function_arrays.py~  angle_between_detectors.ipynb  arbeit_plots.ipynb  arbeit_source_closest_detector.ipynb  asciiplot.py~  bayesian_fit-Copy1.ipynb  bayesian_fit-Copy2.ipynb  calc_angle_eff.py  calc_angle_eff.py~  calc_burst_angle.py  calc_burst_angle.py~  calc_class.py  calc_class.py~  calc_curve_fit_plot.py  calc_date_to_met.py  calc_date_to_met.py~  calc_day_to_met.py~  calc_detector_orientation.py~  calc_earth_angle.py~  calc_earth_occ_eff.py~  (+88 more)
.ipynb_checkpoints/: Make_fits-Multimessenger-checkpoint.ipynb  Make_fits-ULGRBs-Copy1-checkpoint.ipynb  Make_fits-ULGRBs-checkpoint.ipynb  Make_fits-ULGRBs-reversed-checkpoint.ipynb  Make_fits_test_pointsources-Copy1-checkpoint.ipynb  Make_fits_test_pointsources-Copy2-checkpoint.ipynb  Make_fits_test_pointsources-checkpoint.ipynb  Make_fits_test_pointsources-number_eval-Copy3-checkpoint.ipynb  Make_fits_test_pointsources-number_eval-checkpoint.ipynb  Make_fits_test_pointsources-number_eval-reverted-checkpoint.ipynb  arbeit_plots-checkpoint.ipynb  arbeit_residuals_effective-checkpoint.ipynb  arbeit_residuals_histogram-checkpoint.ipynb  combined_fits-checkpoint.ipynb  earth_occ_file_total-checkpoint.ipynb  get_coeffs-checkpoint.ipynb  get_src_location-checkpoint.ipynb  masterarbeit_plots-checkpoint.ipynb  my_fit_echans-checkpoint.ipynb  pointsources_coeff_plot-checkpoint.ipynb  residual_analysis-checkpoint.ipynb  residual_histogram-checkpoint.ipynb  source_detector_angles-checkpoint.ipynb
Calculations/: Constant_function.py  Constant_function.py~  Counts_Angles_plot.py  Counts_Angles_plot.py~  Fits_echan_counts0_SFLtimes.py  Fits_echan_counts0_distance_trial.py  Fits_total_counts.py  Periodical_orbit_sin_function.py  chi_square.py  interpolation_start.py  plot_all_functions.py
Notebooks/: Data_Exploration.ipynb
_sources/: index.rst.txt
docs/: astromodels_config.yml  conf.py  index.rst  requirements.txt
examples/: Make_fits-Multimessenger-reversed.ipynb  Make_fits_test_pointsources-number_eval-Copy2.ipynb  Make_fits_test_pointsources-number_eval-Copy3.ipynb  Make_fits_test_pointsources-number_eval.ipynb  addition_test.ipynb  arbeit_residuals_effective.ipynb  arbeit_residuals_histogram.ipynb  bayesian_fit.ipynb  coeff_reference.ipynb  combined_fits.ipynb  combined_fits_test.ipynb  config_default.yml  config_default_trigdat.yml  config_plot_default.yml  detector_flux_calculation.ipynb  fit_background.py  get_src_location.ipynb  load_result_save_unbinned.py  my_fit_saa.ipynb  my_fit_saa_prefit_function.ipynb  occ_reference.ipynb  plot_result.py  residual_subtraction.ipynb
gbmbkgpy/: __init__.py  _version.py  calc_earth_occ_eff.py  calc_emm2015.py  calc_rigidity.py  calc_sat_to_geo.py  calc_sun_angle.py  create_fits_coefficients_file.py  eddit_fitsfile.py  external_prop.py  functions.py  jup_make_fits_101225.py  jup_make_fits_130925.py  jup_make_fits_150914.py  minimizer.py  model.py  point_source.py  point_sources.py  read_class.py  read_earth_occ.py  read_fit_coeff.py  read_flares.py  read_magfits.py  read_module.py  read_poshist.py  sed_function.py  work_SAAtest.py  work_advanced.py  work_flares_magn.py  work_module.py  work_module_old.py  work_module_refactor.py  work_more_advanced.py  work_more_advanced_binning.py  work_the_one_bayesian.py
install/: build_environment.sh  (+2 more)
(+788 files in other folders)
