[metadata]
name = gbmbkgpy
description = A physical background model for FERMI-GBM
long_description = file:README.md
long_description_content_type = text/markdown
url = https://github.com/mpe-heg/GBM-background-model
author_email = jburgess@mpe.mpg.de
author = MPE GRB Team
requires_python = >=3.3.0
license = GPL-2+

classifiers =
    Development Status :: 2 - Pre-Alpha
    Environment :: Console
    Intended Audience :: Science/Research
    License :: OSI Approved :: GNU General Public License v2 or later (GPLv2+)
    Operating System :: POSIX
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Topic :: Scientific/Engineering :: Physics

project_urls =
    Bug Tracker = https://github.com/mpe-heg/GBM-background-model/issues
    Source Code = https://github.com/mpe-heg/GBM-background-model


[options]
packages = find:
install_requires =
    numpy
    scipy
    ipython
    matplotlib
    astropy
    h5py
    cython
    numba
    pandas
    gbm_drm_gen
    gbmgeometry
    astromodels
    spherical_geometry
    healpy
    numdifftools
    numexpr



tests_require =
    pytest
    pytest-codecov
    pytest-ordering


[tool:pytest]
# Options for py.test:
# Specify command line options as you would do when invoking py.test directly.
# e.g. --cov-report html (or xml) for html/xml output or --junitxml junit.xml
# in order to write a coverage file that can be read by Jenkins.
addopts = --color=yes --cov=gbmbkgpy --cov-report=term -ra --ignore=gbmbkgpy/test --ignore=gbmbkgpy/_version.py
log_cli = 1
log_cli_level = INFO
testpaths = gbmbkgpy/test
norecursedirs = gbmbkgpy/test


[versioneer]
VCS=git
style=pep440
versionfile_source=gbmbkgpy/_version.py
versionfile_build=gbmbkgpy/_version.py
tag_prefix=v
parentdir_prefix=gbmbkgpy-
